# IronOS

./: Cargo.toml  README.md  rust-toolchain.toml
ironos/: Cargo.toml  build.rs
ironos/src/: main.rs
kernel/: Cargo.toml
kernel/src/: kernel.rs  lib.rs  main.rs
kernel/src/architecture/: architecture.rs  architecture_api.rs  mod.rs
kernel/src/architecture/x86_64/: global_descriptor_table.rs  interrupts.rs  mod.rs  x86_64.rs
kernel/src/architecture/x86_64/interrupts/: exception_handlers.rs  interrupt_descriptor.rs  interrupt_descriptor_table.rs  interrupt_descriptor_table_descriptor.rs  interrupt_descriptor_type_attributes.rs  interrupts.rs  mod.rs
src/: main.rs
